--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,21 +4,21 @@ disqus:
   disqus_shortname: 'apham'
 
 # If you are not using Google Analytics, please change 'google-ID' to an empty string
-google-ID: 'UA-91332049-1'
+google-ID: ''
 
 menu: 
   - name: Featured Projects
     submenu:
       - name: MicroBam
-        link: /projects/microbam
+        link: /ShootYourFriendsWebsite/projects/microbam
       - name: OurLegacy
-        link: /projects/ourlegacy
+        link: /ShootYourFriendsWebsite/projects/ourlegacy
   - name: Posts
-    link: /
+    link: /ShootYourFriendsWebsite
   - name: Tags
-    link: /tags
+    link: /ShootYourFriendsWebsite/tags
   - name: About
-    link: /about
+    link: /ShootYourFriendsWebsite/about
   - name: Follow me
     submenu:
       - name: GitHub
