--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ exclude:
   - Gemfile
   - Gemfile.lock
 include: ["_pages"]
-permalink: /ShootYourFriendsWebsite/posts/:title/
+permalink: /posts/:title/
 excerpt_separator: <!--more-->
 author: https://www.linkedin.com/in/zach-mackay-b78b89170/
 
