--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -26,7 +26,7 @@ menu:
         link: http://github.com/zmalexander
       - name: LinkedIn
         icon: linkedin-square
-        link: http://www.linkedin.com/in/alainpham
+        link: inkedin.com/in/zach-mackay-b78b89170/
       - name: Twitter
         icon: twitter
         link: https://google.com
