--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -14,7 +14,7 @@ menu:
       - name: OurLegacy
         link: /ShootYourFriendsWebsite/projects/ourlegacy
   - name: Posts
-    link: /ShootYourFriendsWebsite/
+    link: /
   - name: Tags
     link: /ShootYourFriendsWebsite/tags
   - name: About
