--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -6,6 +6,7 @@ disqus:
 # If you are not using Google Analytics, please change 'google-ID' to an empty string
 google-ID: ''
 
+#Changes here effect the header menu only
 menu: 
   - name: Featured Projects
     submenu:
@@ -14,7 +15,7 @@ menu:
       - name: OurLegacy
         link: /ShootYourFriendsWebsite/projects/ourlegacy
   - name: Posts
-    link: /
+    link: /ShootYourFriendsWebsite/
   - name: Tags
     link: /ShootYourFriendsWebsite/tags
   - name: About
