Correct broken url

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -21,7 +21,7 @@ menu:
         link: http://github.com/zmalexander
       - name: LinkedIn
         icon: linkedin-square
-        link: inkedin.com/in/zach-mackay-b78b89170/
+        link: https://linkedin.com/in/zach-mackay-b78b89170/
       - name: Facebook
         icon: facebook
         link: https://facebook.com
