--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Shoot Your Friends Blog
 name: Blog
 description: 
   This is our game blog for Shoot Your Friends
-baseurl: "/ShootYourFriendsWebsite" # the subpath of your site, e.g. /blog
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 github_username:  zmalexander
 
 # jekyll-paginate configuration
